# apex-neural

./: .gitattributes  .gitignore  README.md  hooks.json  plugin.json
.github/: copilot-instructions.md  schedule.json  tool-sets.json  workflow-config.json
.github/agents/: architect.agent.md  maintenance.agent.md  orchestrator.agent.md  planner.agent.md  skill-creator.agent.md  solutioner.agent.md  tester.agent.md
.github/hooks/: safety-and-tracking.json
.github/memory/: README.md  index.json  memory-health.json  schedule-state.json
.github/memory/architect/: TEMPLATE.md
.github/memory/shared/: README.md
.github/scripts/: memory-to-skill.sh
extensions/apex-neural-memory/: .vscodeignore  LICENSE  README.md  apex-neural-memory-0.1.0.vsix  package-lock.json  package.json
langgraph/: README.md  __init__.py  __main__.py  config.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  state.py
langgraph/agents/: __init__.py  tester.py
langgraph/apex_neural/: __main__.py  main.py  orchestrator.py  state.py
langgraph/apex_neural/agents/: architect.py  maintenance.py  planner.py  solutioner.py
langgraph/apex_neural/memory/: __init__.py
langgraph/apex_neural/tools/: __init__.py  memory_tool.py
langgraph/tests/: test_config.py  test_memory_tool.py  test_orchestrator.py
langgraph/tools/: memory_tool.py
scripts/: setup.cmd  setup.js  setup.ps1  setup.sh
scripts/hooks/: post-edit-lint.sh  pre-tool-guard.sh  session-init.sh  subagent-tracker.sh
whitepaper/: README.md  whitepaper-apex-ecosystem-2026-04-07.md  whitepaper-apex-neural-2026-03-30.md
(+33 files in other folders)
